--- a/css/footer.css
+++ b/css/footer.css
@@ -1,7 +1,49 @@
 .footer{
+    background-color:#ebebeb;
     font-family: "Roboto", sans-serif;
     text-align: center;
     margin-top: 10px;
     margin-bottom: 10px;
-    background-color: #ebebeb;
+    width: 100%;
+    margin-left: -5px;
+    margin-right: -10px;
+}
+
+    /* Subtitulos H5 */
+
+.subtitle-footer{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    color: #666;
+}
+
+.subtitle-copyright{
+    text-align: start;
+    color: gray;
+}
+
+.description-footer{
+    color: #666;
+
+}
+
+/* Iconos */
+
+.fa-credit-card{
+    color: #1259c3;
+    font-size: 2em;
+}
+.fa-gift{
+    color: #1259c3;
+    font-size: 2em;
+}
+.fa-user-shield{
+    color: #1259c3;
+    font-size: 2em;
+}
+
+    /* Divs del footer  */
+
+.contenido-footer{
+    margin-top: 10px;
 }
