--- a/css/header.css
+++ b/css/header.css
@@ -1,24 +1,63 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+h1{
+    width: 1px;
+    height: 1px;
+    visibility: hidden;
+    margin-top: 0%;
+    margin-bottom: 0%;
+    padding: -20px;
+}
 
 .main-header {
+    /* margin: -1em 1em 1em -1em; */
     background-color: #EAC926 ;
     font-family: "Roboto", sans-serif;
-    display: flex;
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    padding: 10px;
+    /* padding: 1em; */
+}
+.header-search{
+    margin-left: -10px;
+    margin-right: -10px;
 }
 
 .logo {
+    padding: 1em;
     width: 200px;
     height: 100px;
+    margin-bottom: -20px;
 }
 
 .header_line_frase{
+    width: 30em;
+    margin-left: -20px;
+    margin-right: -20px;
     text-align: center;
 }
 
+.nav-bar{
+    margin-left: -10px;
+    margin-right: 0px;
+}
+
+.li-content-header{
+    color: #03264C;
+    text-decoration-line: underline;
+}
+
 .my-icon{
-    color:  #1259c3;
+    color: #1259c3;
+}
+
+.button-search {
+    margin: auto;
+    margin-left: 1px;
+    padding: 2px;
+    cursor: pointer;
+    font-size: 16px;
+    align-items: center;
+}
+.button-search i {
+    margin-right: 5px; /* Espacio entre ícono y texto */
 }
