--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,7 @@
 /* img{
     width: 200px;
 } */
-h1{
-    visibility: hidden;
-}
+
 h2,h3,h4{
     font-size: 24px;
 }
@@ -33,11 +31,10 @@ article{
     text-align: center;
 }
 
-.articulo{
-    /* text-align: center; */
-}
+    /* Articulos  */
 
 .main-article{
+    text-align: center;
         width: 100%;
         height: auto; 
         max-width: 300px;
