--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,9 @@
 @import url(main.css);
 @import url(footer.css);
 @import url(mediaQueries.css);
+@import url(register.css);
+@import url(login.css);
+
+body{
+    margin: 0px -1em -10px 0px;
+}
