--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,74 @@
 @import url(register.css);
 @import url(login.css);
 
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body{
-    margin: 0px -1em -10px 0px;
+    font-family: "Roboto", sans-serif;
+    box-sizing: inherit;
+    background-color: #ebebeb;
+}
+
+header{
+    background-color: #EAC926;
+    font-family: "Roboto", sans-serif;
+    padding: 10px 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+footer{
+    background-color:#ffffff;
+    font-family: "Roboto", sans-serif;
+    text-align: center;
+    padding: 8px 5px;
+}
+
+img{
+    width: 15em;
+}
+
+h1{
+    width: 0;
+    height: 0;
+    visibility: hidden;
+    margin: 0;
+    padding: 0;
+}
+
+h2{
+    display: flex;
+    justify-content: center;
+    font-size: 24px;
+    text-align: center;
+    width: 90%;
+    margin: 10px;    
+}
+
+/* h3,h4{
+    font-size: 24px;
+    text-align: center;
+    width: 90%;
+    padding: 0;
+} */
+
+p{
+    font-size: 12px;
+}
+
+ul{
+    list-style: none;
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 100%;
+    max-width: 300px;
+    margin: 0 auto;
+    padding: 20px;
 }
