--- a/css/header.css
+++ b/css/header.css
@@ -1,53 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-        /* Screen <= 426px */
-
-@media (max-width: 426px) {
-    
-.burger-menu{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    padding: 5px;
-}
-
-.my-icon{
-    width: 10%;
-    height: 25px;
-    padding: 15px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #1259c3;
-    color: #fff;
-    border-radius: 15%;
-}
-
-.nav-bar{
-    display: none;
-}
-
-.body-main{
-    width: 100%;
-}
-
-.main-header{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-}
-
-        /* Screen > 426px */
-
-@media (min-width: 426px) {
-    .burger-menu {
-        display: none;
-    }
-}
-
 .main-header {
     display: flex;
     align-items: center;
@@ -66,7 +18,7 @@
 }
 
 .header_line_frase{
-    width: 30em;
+    width: 25em;
     padding: 0;
     margin: 10px 0;
     justify-content: center;
@@ -74,6 +26,7 @@
 }
 
 .nav-bar{
+    padding: 10px;
     margin-left: -10px;
     margin-right: 0px;
 }
@@ -91,6 +44,72 @@
     font-size: 16px;
     align-items: center;
 }
+
 .button-search i {
-    margin-right: 5px; /* Espacio entre ícono y texto */
+    margin-right: 5px;
 }
+
+    /* Screen > 426px */
+
+@media (min-width: 426px) {
+    .burger-menu {
+    display: none;
+    }
+
+    .main-header {
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        flex-wrap: wrap;
+    }
+
+    .search-box{
+        align-self: center;
+        padding: 0 0 5px 0;
+    }
+
+    .header_line_frase{
+        align-self: center;
+    }
+}
+
+    /* Screen <= 426px */
+
+@media (max-width: 426px) {
+
+    .burger-menu{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 5px;
+    }
+    
+    .my-icon{
+        width: 2em;
+        height: 25px;
+        padding: 15px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #1259c3;
+        color: #fff;
+        border-radius: 15%;
+    }
+    
+    .nav-bar{
+        display: none;
+    }
+    
+    .body-main{
+        width: 100%;
+    }
+    
+    .main-header{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    }
+    
