--- a/css/main.css
+++ b/css/main.css
@@ -1,17 +1,10 @@
-@media (max-width: 426px){
-    .seccion{
-        margin: auto;
-        padding: 0;
-        border: none;
-        display: flex;
-        flex-wrap: wrap;
-        text-align: center;
-        align-items: center;
-        justify-content: center;
-    }
+.banner img{
+    width: 100%;
+    box-shadow: 0px 5px 15px rgb(100, 100, 100, 0.25);
 }
 
 .main-container{
+    width: 90%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -25,6 +18,12 @@
     padding: 0;
     margin: 0;
     width: 90%;
+}
+
+.nav-container{
+    padding: auto;
+    display: flex;
+    flex-direction: column;
 }
 
 .seccion-lastSeen, .seccion-ofertas{
@@ -44,12 +43,12 @@
 .articulo{
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     background-color: #ebebeb;;
-    border: solid 1px rgb(162, 162, 162);
+    border-top: solid 1px rgb(162, 162, 162);
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    padding: 12px 6px 12px 6px;
+    padding: 15px;
 }
 
 .title-article{
@@ -66,14 +65,14 @@
 }
 
 .fa-truck-fast{
-    color: green;
+    color: #06a806;
     width: 16%;
     display: flex;
     justify-content: start;
     text-align: start;
     margin-top: 10px;
     padding: 5px;
-    border: solid 1px green;
+    border: solid 1px #06a806;
     border-radius: 100%;
 }
 
@@ -103,8 +102,28 @@
     font-size: 16px;
     margin: 0 0 0 5px;
     padding: 5px;
+    color: #06a806;
+}
+    
+@media (min-width: 768px){
+    .articulo{
+        box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    }
 }
 
-/* .description{
-    font-size: 16px; 
-} */
+@media (max-width: 426px){
+.text-article{
+    display: none;
+}
+
+.seccion{
+    margin: auto;
+    padding: 0;
+    border: none;
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+}
