--- a/css/main.css
+++ b/css/main.css
@@ -41,14 +41,15 @@
 /* Articulos  */
 
 .articulo{
-    box-shadow: 0px 0px 10px rgb(100, 100, 100);
-    background-color: #ebebeb;;
+    background-color: white;
     border-top: solid 1px rgb(162, 162, 162);
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
     padding: 15px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    transition: box-shadow 0.3s ease;
 }
 
 .title-article{
@@ -56,6 +57,8 @@
     display: flex;
     text-transform: capitalize;
     margin: 0 0 0 5px;
+    opacity: 0;
+    transition: opacity 0.3s ease;
 }
 
 .img-article{
@@ -68,20 +71,20 @@
 .fa-truck-fast{
     color: #06a806;
     width: 15%;
-    height: 75%;
+    height: 90%;
     display: flex;
-    justify-content: start;
-    text-align: start;
+    justify-content: center;
+    align-items: center;
     margin-top: 10px;
     padding: 5px;
     border: solid 1px #06a806;
     border-radius: 100%;
-    /* position: absolute; */
+    transition: transform 0.7s ease;
 }
 
 .camion{
-    width: 90%;
-    margin: 0 0 0 8px;
+    width: 100%;
+    /* padding: 5px; */
     display: flex;
     flex-direction: row-reverse;
     position: relative;
@@ -101,7 +104,7 @@
 }
 
 .precio-descuento{
-    width: 90%;
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: start;
@@ -117,7 +120,7 @@
 .descuento{
     font-size: 16px;
     margin: 0 0 0 5px;
-    padding: 5px;
+    padding: 3px;
     color: #06a806;
 }
 
@@ -125,15 +128,23 @@
     display: flex;
 }
 
+        /* Transiciones */
+
+.title-article:hover{
+    opacity: 1;
+}
+
+.articulo:hover{
+    box-shadow: 0px 0px 10px rgb(100, 100, 100)
+}
+
+.fa-truck-fast:hover{
+    transform: rotate(-90deg)
+}
+
+        /* Media Queries */
+
 @media (min-width: 0px) and (max-width: 374px){
-
-.articulo{
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.title-article{
-    display: none;
-}
 
 .seccion{
     margin: auto;
@@ -152,9 +163,6 @@
 }
 
 @media (min-width: 375px) and (max-width: 424px){
-    .articulo{
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    }
     .fa-truck-fast{
         width: 14%;
     }
@@ -170,9 +178,6 @@
     .title-article{
         display: none;
     }
-    .articulo{
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    }
 }
 
 @media (min-width: 768px) and (max-width: 1023px){
@@ -181,12 +186,8 @@
         flex-direction: row;
     }
 
-    .articulo{
-        box-shadow: 0px 0px 10px rgb(100, 100, 100);
-    }
-
     .fa-truck-fast{
-        width: 14%;
+        width: 13%;
     }
     h3{
         width: 100%;
@@ -211,7 +212,7 @@
     .articulo{
         max-width: 350px;
         width: 23%;
-        box-shadow: 0px 0px 10px rgb(100, 100, 100);
+        /* box-shadow: 0px 0px 10px rgb(100, 100, 100); */
         margin: 5px;
     }
 
@@ -220,8 +221,15 @@
     }
 }
 
-@media (min-width: 1440px) and (max-width: 2560px){
+@media (min-width: 1440px){
     .fa-truck-fast{
-        width: 14%;
+        width: 11.1%;
+        align-items: center;
+        justify-content: center;
+}
+.articulo{
+    max-width: 350px;
+    width: 23%;
+    margin: 5px;
 }
 }
