--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body{
 header{
     background-color: #EAC926;
     font-family: "Roboto", sans-serif;
-    padding: 10px 20px;
+    padding: 20px 30px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
@@ -34,7 +34,7 @@ footer{
     background-color:#ffffff;
     font-family: "Roboto", sans-serif;
     text-align: center;
-    padding: 8px 5px;
+    padding: 15px 5px 10px 5px;
 }
 
 img{
